--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "glob": "^7.1.2",
     "jquery": "^3.2.1",
     "pug": "^2.0.0-rc.4",
-    "vue": "^2.5.9"
+    "vue": "^2.5.9",
+    "vue-loader": "^13.5.0"
   }
 }
